--- a/collectIO/appsettings.json
+++ b/collectIO/appsettings.json
@@ -9,6 +9,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     //"CollectioDbConnection": "server=(localdb)\\MSSQLLocalDB;database=RazorDB;Integrated Security=true;MultipleActiveResultSets=True"
-    "CollectioDbConnection": "Data Source=SQL8003.site4now.net;Initial Catalog=db_a85609_razordb;User Id=db_a85609_razordb_admin;Password=megakal123;MultipleActiveResultSets=True"
+    "CollectioDbConnection": "Data Source=SQL8003.site4now.net;Initial Catalog=db_a85609_razordb;User Id=db_a85609_razordb_admin;Password=***;MultipleActiveResultSets=True"
   }
 }
